# tf-aarch64-demo

./: .gitignore  CMakeLists.txt  pack.sh  readme.md
doc/: build_for_aarch64.md  tf_build_for_aarch64.md  错误日志.md
include/tensorflow/bazel-genfiles/tensorflow/core/framework/: step_stats.pb.cc
include/tensorflow/bazel-genfiles/tensorflow/core/kernels/boosted_trees/: boosted_trees.pb.cc
include/tensorflow/bazel-genfiles/tensorflow/core/protobuf/: config.pb.cc  debug.pb.cc  eager_service.pb.cc  rewriter_config.pb.cc  worker.pb.cc
include/tensorflow/bazel-genfiles/tensorflow/core/util/: version_info.cc
include/tensorflow/tensorflow/core/util/: version_info.cc
src/: CMakeLists.txt  tf_add.cpp  tf_dlopen.cpp  tf_env.cpp  tf_minist.cpp
